Fix layout issue around teaser area

--- a/app/assets/stylesheets/poc/layouts/opportunity.scss
+++ b/app/assets/stylesheets/poc/layouts/opportunity.scss
@@ -2,6 +2,10 @@
 @import "../effects/simple_text_display_restrictor";
 
 
+h1 {
+  margin-bottom: $spacing-2;
+}
+
 .breadcrumbs {
   margin-bottom: $spacing-1;
 }
@@ -77,7 +81,7 @@
   .summary {
     border-bottom: $light-grey solid 2px;
     color: $mid-grey;
-    margin-bottom: $spacing-3;
+    margin-bottom: $spacing-1;
     padding-bottom: $spacing-3;
   }
 
